# scraping_guimavel

./: .gitignore  README.md  app.py  estoque.JSON  pyproject.toml
